force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>Asset associated with an Opportunity. (Stock Items are assigned to an Asset)</description>
    <label>Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>