force-app/main/default/objects/Asset__c/fields/Account_Relay_method__c.field-meta.xml
<CustomField>
    <fullName>Account_Relay_method__c</fullName>
    <formula>INCLUDES(Account__r.Relay_Method__c, &quot;Terminal&quot;)</formula>
    <label>Account Relay method</label>
    <type>Checkbox</type>
</CustomField>