force-app/main/default/objects/Asset__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>when the terminal was activated</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>