force-app/main/default/objects/Asset__c/fields/Activation_Due_date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Due_date__c</fullName>
    <description>Due date on which the Restaurant wants the Activation &amp; Test Order</description>
    <label>Activation Due Date</label>
    <type>Date</type>
</CustomField>