force-app/main/default/objects/Asset__c/fields/Additional_Charge_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Charge Shadow</description>
    <label>Additional Charges Shadow</label>
    <referenceTo>Additional_Charge_Shadow__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>