force-app/main/default/objects/Asset__c/fields/Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>Backend_Id__c</fullName>
    <formula>Account__r.Backend_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backend Id</label>
    <type>Text</type>
</CustomField>