force-app/main/default/objects/Asset__c/fields/Cancellation_Fee_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Charge_Date__c</fullName>
    <description>Date for the cancellation fee invoice Korea</description>
    <label>Cancellation Fee Charge Date</label>
    <type>Date</type>
</CustomField>