force-app/main/default/objects/Asset__c/fields/Charge_Free__c.field-meta.xml
<CustomField>
    <fullName>Charge_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Free</label>
    <type>Checkbox</type>
</CustomField>