force-app/main/default/objects/Asset__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <formula>Account__r.Company_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Number</label>
    <type>Text</type>
</CustomField>