force-app/main/default/objects/Asset__c/fields/CSC_P_I_C__c.field-meta.xml
<CustomField>
    <fullName>CSC_P_I_C__c</fullName>
    <description>CSC person in charge for KR</description>
    <inlineHelpText>CSC person in charge</inlineHelpText>
    <label>CSC P.I.C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>강민철</fullName>
            </value>
            <value>
                <fullName>강윤구</fullName>
            </value>
            <value>
                <fullName>강윤수</fullName>
            </value>
            <value>
                <fullName>강인애</fullName>
            </value>
            <value>
                <fullName>고은정</fullName>
            </value>
            <value>
                <fullName>고재석</fullName>
            </value>
            <value>
                <fullName>권유라</fullName>
            </value>
            <value>
                <fullName>권지수</fullName>
            </value>
            <value>
                <fullName>김건희</fullName>
            </value>
            <value>
                <fullName>김기석</fullName>
            </value>
            <value>
                <fullName>김만규</fullName>
            </value>
            <value>
                <fullName>김명주</fullName>
            </value>
            <value>
                <fullName>김명진</fullName>
            </value>
            <value>
                <fullName>김미영</fullName>
            </value>
            <value>
                <fullName>김선재</fullName>
            </value>
            <value>
                <fullName>김수용</fullName>
            </value>
            <value>
                <fullName>김아영2</fullName>
            </value>
            <value>
                <fullName>김영남</fullName>
            </value>
            <value>
                <fullName>김정훈</fullName>
            </value>
            <value>
                <fullName>김지희</fullName>
            </value>
            <value>
                <fullName>김진식</fullName>
            </value>
            <value>
                <fullName>김진우</fullName>
            </value>
            <value>
                <fullName>김현규</fullName>
            </value>
            <value>
                <fullName>김혜린</fullName>
            </value>
            <value>
                <fullName>김희영</fullName>
            </value>
            <value>
                <fullName>남승현</fullName>
            </value>
            <value>
                <fullName>노혜란</fullName>
            </value>
            <value>
                <fullName>류정관</fullName>
            </value>
            <value>
                <fullName>문정아</fullName>
            </value>
            <value>
                <fullName>문치영</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>