force-app/main/default/objects/Asset__c/fields/Date_of_Failed_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Failed_Deliver__c</fullName>
    <description>When was the request initialised</description>
    <label>Date of Failed Delivery</label>
    <type>Date</type>
</CustomField>