force-app/main/default/objects/Asset__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the restaurant paid for the terminal</description>
    <label>Deposit Paid</label>
    <type>Checkbox</type>
</CustomField>