force-app/main/default/objects/Asset__c/fields/Failed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Failed_Delivery_Date__c</fullName>
    <description>When was the request initialised</description>
    <label>Failed Delivery Date</label>
    <type>Date</type>
</CustomField>