force-app/main/default/objects/Asset__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>When the restaurant have to start to pay for the terminal</description>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>