force-app/main/default/objects/Asset__c/fields/GRID__c.field-meta.xml
<CustomField>
    <fullName>GRID__c</fullName>
    <externalId>true</externalId>
    <label>GRID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>