force-app/main/default/objects/Asset__c/fields/Id_Opportunity_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Id Opportunity Quote Line Item</label>
    <referenceTo>Opportunity_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>