force-app/main/default/objects/Asset__c/fields/Id_Opportunity_Quote_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added as for SP-235</description>
    <label>Id Opportunity Quote Product Item</label>
    <referenceTo>Opportunity_Quote_Product_Item__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>