force-app/main/default/objects/Asset__c/fields/Initiate_Return__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Return__c</fullName>
    <label>Initiate Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arrange Pick up</fullName>
            </value>
            <value>
                <fullName>Delivered to Warehouse</fullName>
            </value>
            <value>
                <fullName>Exchange Requested</fullName>
            </value>
            <value>
                <fullName>Owner sends Terminal</fullName>
            </value>
            <value>
                <fullName>Sales Rep Terminated</fullName>
            </value>
            <value>
                <fullName>Takeover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>