force-app/main/default/objects/Asset__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read-only checkbox - Updated from the Backend Relay Method</description>
    <inlineHelpText>Updated with information from the Backend Relay Method</inlineHelpText>
    <label>In Use</label>
    <type>Checkbox</type>
</CustomField>