force-app/main/default/objects/Asset__c/fields/Is_Data_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Data_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Data Loaded</label>
    <type>Checkbox</type>
</CustomField>