force-app/main/default/objects/Asset__c/fields/Last_Tracking_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Tracking_Update__c</fullName>
    <label>Last Tracking Update</label>
    <type>DateTime</type>
</CustomField>