force-app/main/default/objects/Asset__c/fields/Migrated_By__c.field-meta.xml
<CustomField>
    <fullName>Migrated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssetsMigratedBy</relationshipName>
    <type>Lookup</type>
</CustomField>