force-app/main/default/objects/Asset__c/fields/Migrated_From_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Migrated_From_Source_System__c</fullName>
    <description>Source System - Restricted pick-list(for example: &apos;Salesforce PeYa&apos; is the source for migrating data from old PeYa instance)
SP-2884</description>
    <label>Migrated From/Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Migrated_From_Source_System</valueSetName>
    </valueSet>
</CustomField>