force-app/main/default/objects/Asset__c/fields/No_of_Powerplugs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Powerplugs__c</fullName>
    <label>No. of Powerplugs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>