force-app/main/default/objects/Asset__c/fields/Number_of_Returns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Returns__c</fullName>
    <description>The number of returned terminals</description>
    <label>Number of Failed Deliveries</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>