force-app/main/default/objects/Asset__c/fields/Old_SF_Box_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Box_Record_Id__c</fullName>
    <description>Box Serial Number based on case number from Old SF, to be used for migration</description>
    <label>Old SF Box Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>