force-app/main/default/objects/Asset__c/fields/Old_SF_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Case_Id__c</fullName>
    <label>Old SF Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>