force-app/main/default/objects/Asset__c/fields/Old_SF_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Case_Number__c</fullName>
    <label>Old SF Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>