force-app/main/default/objects/Asset__c/fields/Old_SF_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Owner_Id__c</fullName>
    <label>Old SF Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>