force-app/main/default/objects/Asset__c/fields/Person_In_Charge_Return__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge_Return__c</fullName>
    <description>Who is responsible for  the return of the terminal</description>
    <label>Person In Charge - Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>kim</fullName>
            </value>
            <value>
                <fullName>김민수</fullName>
            </value>
            <value>
                <fullName>김성재</fullName>
            </value>
            <value>
                <fullName>김한터</fullName>
            </value>
            <value>
                <fullName>남현호</fullName>
            </value>
            <value>
                <fullName>박경원</fullName>
            </value>
            <value>
                <fullName>박상우</fullName>
            </value>
            <value>
                <fullName>백효인</fullName>
            </value>
            <value>
                <fullName>옥동호</fullName>
            </value>
            <value>
                <fullName>윤형민</fullName>
            </value>
            <value>
                <fullName>이승배</fullName>
            </value>
            <value>
                <fullName>정태건</fullName>
            </value>
            <value>
                <fullName>차지원</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>