force-app/main/default/objects/Asset__c/fields/Previously_Failed_Return__c.field-meta.xml
<CustomField>
    <fullName>Previously_Failed_Return__c</fullName>
    <label>Previously Failed Return</label>
    <length>255</length>
    <type>Text</type>
</CustomField>