force-app/main/default/objects/Asset__c/fields/Printer_Id__c.field-meta.xml
<CustomField>
    <fullName>Printer_Id__c</fullName>
    <label>Printer Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>