force-app/main/default/objects/Asset__c/fields/Replaced_Asset__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Assets (Replaced Asset)</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>