force-app/main/default/objects/Asset__c/fields/Replaced_Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Stock_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returning Stock Item</label>
    <referenceTo>Stock_Item__c</referenceTo>
    <relationshipLabel>Assets (Returned Stock Item)</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>