force-app/main/default/objects/Asset__c/fields/Retour_Date__c.field-meta.xml
<CustomField>
    <fullName>Retour_Date__c</fullName>
    <label>Return Request Date</label>
    <type>Date</type>
</CustomField>