force-app/main/default/objects/Asset__c/fields/Retour_Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Retour_Shipping_Company__c</fullName>
    <label>Return Shipping Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUS Post</fullName>
            </value>
            <value>
                <fullName>DH Staff</fullName>
            </value>
            <value>
                <fullName>epost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>