force-app/main/default/objects/Asset__c/fields/Retour_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Retour_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>