force-app/main/default/objects/Asset__c/fields/Return_Comments__c.field-meta.xml
<CustomField>
    <fullName>Return_Comments__c</fullName>
    <label>Return Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>