force-app/main/default/objects/Asset__c/fields/Return_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipment_Date__c</fullName>
    <label>Return Shipment Date</label>
    <type>Date</type>
</CustomField>