force-app/main/default/objects/Asset__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <description>Return status of the terminal</description>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivered to Warehouse</fullName>
            </value>
            <value>
                <fullName>Arrange Pick up</fullName>
            </value>
            <value>
                <fullName>Owner sends Terminal</fullName>
            </value>
            <value>
                <fullName>Awaiting Shipping</fullName>
            </value>
            <value>
                <fullName>En Route</fullName>
            </value>
            <value>
                <fullName>Attempted Delivery</fullName>
            </value>
            <value>
                <fullName>Sales Rep Terminated</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>