force-app/main/default/objects/Asset__c/fields/Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Returned_Date__c</fullName>
    <label>Date of Return to Warehouse</label>
    <type>Date</type>
</CustomField>