force-app/main/default/objects/Asset__c/fields/Shared_Information__c.field-meta.xml
<CustomField>
    <fullName>Shared_Information__c</fullName>
    <label>Shared Information</label>
    <type>TextArea</type>
</CustomField>