force-app/main/default/objects/Asset__c/fields/Shipment_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order</label>
    <referenceTo>Shipment_Order__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>