force-app/main/default/objects/Asset__c/fields/Shipment_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order Line Item</label>
    <referenceTo>Shipment_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>