force-app/main/default/objects/Asset__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
    &quot;AT_Asset&quot;,
    IF(NOT(ISBLANK(Account__r.Formatted_Shipping_Address__c)), Account__r.Formatted_Shipping_Address__c, &quot;Restaurant has no shipping address!&quot;),
    &quot;DE_Asset&quot;,
    IF(NOT(ISBLANK(Account__r.Formatted_Shipping_Address__c)), Account__r.Formatted_Shipping_Address__c, &quot;Restaurant has no shipping address!&quot;),
    &quot;SE_Asset&quot;,
    IF(NOT(ISBLANK(Account__r.Formatted_Shipping_Address__c)), Account__r.Formatted_Shipping_Address__c, &quot;Restaurant has no shipping address!&quot;),
   &quot;PY_Asset&quot;,
    IF(NOT(ISBLANK(Account__r.Formatted_Shipping_Address__c)), Account__r.Formatted_Shipping_Address__c, &quot;Restaurant has no shipping address!&quot;),
    /* all other countries */
    If(LEN(Account__r.ShippingStreet)&gt;0, Account__r.ShippingStreet, &quot;&quot;) &amp; BR() &amp;
    If(LEN(Account__r.ShippingCity)&gt;0, Account__r.ShippingCity, &quot;&quot;) &amp; BR() &amp;
    If(LEN(Account__r.ShippingState)&gt;0, Account__r.ShippingState, &quot;&quot;) &amp; BR() &amp;
    If(LEN(Account__r.ShippingPostalCode)&gt;0, Account__r.ShippingPostalCode, &quot;&quot;) &amp; BR() &amp;
    If(LEN(Account__r.ShippingCountry)&gt;0, Account__r.ShippingCountry, &quot;&quot;)
)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>