force-app/main/default/objects/Asset__c/fields/Shipping_Address_Korea__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Korea__c</fullName>
    <formula>If(LEN(Account__r.ShippingStreet)&gt;0, Account__r.ShippingStreet, &quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.ShippingPostalCode)&gt;0, Account__r.ShippingPostalCode, &quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.ShippingCity)&gt;0, Account__r.ShippingCity, &quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.ShippingState)&gt;0, Account__r.ShippingState, &quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.ShippingCountry)&gt;0, Account__r.ShippingCountry, &quot;&quot;)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>