force-app/main/default/objects/Asset__c/fields/Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company__c</fullName>
    <description>The Company responsible for delivering the Asset to the restaurant.</description>
    <inlineHelpText>The Company responsible for delivering the Asset to the restaurant.</inlineHelpText>
    <label>Shipping Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUS Post</fullName>
            </value>
            <value>
                <fullName>DH Staff</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Fastway</fullName>
            </value>
            <value>
                <fullName>Epost</fullName>
            </value>
            <value>
                <fullName>Cvsnet</fullName>
            </value>
            <value>
                <fullName>Field Agent</fullName>
            </value>
            <value>
                <fullName>Sherpa</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Servientrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>