force-app/main/default/objects/Asset__c/fields/Shipping_Dong__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Dong__c</fullName>
    <formula>Account__r.Shipping_Dong__c</formula>
    <label>Shipping Dong</label>
    <type>Text</type>
</CustomField>