force-app/main/default/objects/Asset__c/fields/Shipping_GunGu__c.field-meta.xml
<CustomField>
    <fullName>Shipping_GunGu__c</fullName>
    <formula>Account__r.Shipping_GunGu__c</formula>
    <label>Shipping GunGu</label>
    <type>Text</type>
</CustomField>