force-app/main/default/objects/Asset__c/fields/Shipping_Subdistrict__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Subdistrict__c</fullName>
    <formula>Account__r.Shipping_Subdistrict__c</formula>
    <label>Shipping Subdistrict</label>
    <type>Text</type>
</CustomField>