force-app/main/default/objects/Asset__c/fields/SIM_Activated__c.field-meta.xml
<CustomField>
    <fullName>SIM_Activated__c</fullName>
    <label>SIM Activated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>